# sf-guildscanner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
static/: index.html
unraid/: sf-guildscanner.xml
